# Simulador-Reactor-GT

./: CMakeLists.txt
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  MyNeutronPhysicsList.hh  PMPrimaryGenerator.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: init_vis.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  MyNeutronPhysicsList.cc  PMPrimaryGenerator.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
